methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:38: error: expected class or object definition
def dessineMotifV(){
^PictureMono2:56: error: expected class or object definition
def tourPourV(){
^PictureMono2:66: error: expected class or object definition
def debut(){
^PictureMono2:75: error: expected class or object definition
def fin(){
^PictureMono2:84: error: expected class or object definition
def colorieCase(){
^PictureMono2:89: error: Unmatched closing brace '}' ignored here
}
^